# polymarket-hunter

./: .env.example  .gitignore  Dockerfile  PRICE_HISTORY_README.md  README.md  docker-compose.yml  gunicorn_conf.py  main.py  output.csv  prometheus.yml  pyproject.toml  requirements.in  requirements.txt  run.py
examples/: book.json  context.json  get_positions_response.json  market.json  market2.json  market_order_response.json  order.json  price_change.json  trade.json
history/: api-response.json  main.py
input/: will-hamas-release-any-more-hostages-by-october-12_20251012_174437.json  will-hamas-release-any-more-hostages-by-october-12_20251012_182145.json  will-polymarket-us-go-live-in-2025_20251012_181721.json
polymarket_hunter/: constants.py  main.py
polymarket_hunter/api/: market_router.py  orders_router.py  slugs_router.py  trades_router.py  user_router.py  webhook_router.py
polymarket_hunter/config/: settings.py  strategies.py
polymarket_hunter/core/: subscription_manager.py  ws_client.py
polymarket_hunter/dal/: __init__.py  db.py  market_context_store.py  notification_store.py  order_request_store.py  slug_store.py  trade_record_store.py
polymarket_hunter/dependencies/: manager_dep.py  slugs_subscriber_dep.py
polymarket_hunter/notifier/: telegram_notifier.py
polymarket_hunter/persistence/: order_store.py  slug_store.py
polymarket_hunter/scheduler/: scheduler.py
polymarket_hunter/utils/: helper.py  logger.py  market.py
src/: main.py
src/api/: slugs.py
src/client/: clob.py  data.py  (+3 more)
tests/: test_api.py  test_subscription_manager.py
(+93 files in other folders)
